k8s/todoapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-deployment
  namespace: blackdevs

spec:
  selector:
    matchLabels:
      component: todoapp

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 3

  template:
    metadata:
      labels:
        component: todoapp

    spec:
      containers:
        - name: todoapp-deployment
          image: juliocesarmidia/todo-vue:v2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: todoapp-port
              containerPort: 80

          livenessProbe:
            httpGet:
              path: /
              port: todoapp-port
            initialDelaySeconds: 10
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: todoapp-port
            initialDelaySeconds: 10
            timeoutSeconds: 30

          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"

      restartPolicy: Always
