k8s/client-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31515
  selector:
    component: webapp
