k8s/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  namespace: default

spec:
  type: ClusterIP
  selector:
    component: todoapp

  ports:
  - port: 80
    targetPort: todoapp-port
    protocol: TCP
