k8s/todoapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blackdevs

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-deployment
  namespace: blackdevs

spec:
  selector:
    matchLabels:
      component: todoapp

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 3

  template:
    metadata:
      labels:
        component: todoapp

    spec:
      containers:
        - name: todoapp-deployment
          image: juliocesarmidia/todo-vue:v2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: todoapp-port
              containerPort: 80

          livenessProbe:
            httpGet:
              path: /
              port: todoapp-port
            initialDelaySeconds: 10
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: todoapp-port
            initialDelaySeconds: 10
            timeoutSeconds: 30

          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"

      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  namespace: blackdevs

spec:
  type: ClusterIP
  selector:
    component: todoapp

  ports:
  - port: 80
    targetPort: todoapp-port
    protocol: TCP
