k8s/ingress-local-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: todoapp-service
              servicePort: 80
