k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: todo-vue.local
  - http:
      paths:
        - path: /?(.*)
          backend:
            serviceName: webapp-cluster-ip-service
            servicePort: 80
