k8s/todoapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: blackdevs
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: todoapp-service
            servicePort: 80
